--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,500;1,14..32,500&family=Montserrat:ital,wght@0,500;1,500&family=Syne:wght@700&display=swap" rel="stylesheet" />
 	</head>
 	<body>
-		<header>
+		<header class="top">
 			<a href="#">
 				<img src="./assets/logo.svg" alt="" />
 			</a>
@@ -98,5 +98,74 @@
 				</div>
 			</div>
 		</section>
+
+		<section class="gallery">
+			<header>
+				<span>GALERIA DE FOTOS</span>
+				<h2>#usesnitap por aí</h2>
+			</header>
+
+			<div class="content">
+				<figure>
+					<img src="./assets/images/01.png" alt="" />
+					<figcaption>
+						<img src="./assets/images/person.png" alt="" />
+						<span>@laviniapereira</span>
+					</figcaption>
+				</figure>
+
+				<figure data-delay>
+					<img src="./assets/images/02.png" alt="" />
+					<figcaption>
+						<img src="./assets/images/person.png" alt="" />
+						<span>@laviniapereira</span>
+					</figcaption>
+				</figure>
+
+				<figure>
+					<img src="./assets/images/03.png" alt="" />
+					<figcaption>
+						<img src="./assets/images/person.png" alt="" />
+						<span>@laviniapereira</span>
+					</figcaption>
+				</figure>
+
+				<figure data-delay>
+					<img src="./assets/images/04.png" alt="" />
+					<figcaption>
+						<img src="./assets/images/person.png" alt="" />
+						<span>@laviniapereira</span>
+					</figcaption>
+				</figure>
+			</div>
+		</section>
+
+		<footer>
+			<div class="logo">
+				<img src="./assets/logo.svg" alt="" />
+				Snitap
+			</div>
+
+			<nav>
+				<a href="#">Sobre</a>
+				<a href="#">Nossas lojas</a>
+				<a href="#">Política de privacidade</a>
+			</nav>
+
+			<div class="social-links">
+				<a href="#" title="instagram">
+					<img src="./assets/icons/instagram.svg" alt="" />
+				</a>
+				<a href="#" title="facebook">
+					<img src="./assets/icons/facebook.svg" alt="" />
+				</a>
+				<a href="#" title="youtube">
+					<img src="./assets/icons/youtube.svg" alt="" />
+				</a>
+				<a href="#" title="">
+					<img src="./assets/icons/.svg" alt="" />
+				</a>
+			</div>
+		</footer>
 	</body>
 </html>
